# frank-sign-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  FS - AI - Sayfa1.csv  Project_Main.md  README.md  ROADMAP.md  annotations.xml  pyproject.toml  task.md
.github/workflows/: ci.yml
configs/: default.yaml
data/demo/: clinical_cvat_demo.csv
docs/: audit_report_draft.md  clinical_data_schema.md  data_management.md  data_schema.md  environment.md
docs/processes/: data_pipeline.md  model_development.md
reports/: clinical_validated_demo.parquet  validation.parquet  validation_demo.parquet
scripts/: feature_join.py  parse_annotations.py  train_tabular.py  validate_data.py
src/franksign/: __init__.py
src/franksign/cli/: __init__.py  evaluate.py  parse.py  train.py
src/franksign/data/: __init__.py  augmentation.py  clinical_loader.py  cvat_parser.py  dataset.py  geometric_features.py  preprocess.py  validation.py
src/franksign/models/: __init__.py  attention_unet.py  baseline.py  components.py
src/franksign/training/: __init__.py  losses.py  trainer.py
src/franksign/utils/: __init__.py
tests/: test_clinical_loader.py  test_cvat_parser.py  test_geometric_features.py  test_preprocess.py  test_validation.py
